--- a/package.json
+++ b/package.json
@@ -10,13 +10,17 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.1",
+    "@plaiceholder/next": "^3.0.0",
     "axios": "^1.5.1",
     "moment": "^2.29.4",
     "next": "latest",
+    "plaiceholder": "^3.0.0",
+    "qs": "^6.11.2",
     "react": "latest",
     "react-dom": "latest",
     "react-hook-form": "^7.46.2",
     "react-icons": "^4.11.0",
+    "react-intersection-observer": "^9.5.2",
     "swiper": "^10.3.0",
     "swr": "^2.2.4",
     "yup": "^1.3.1",
@@ -24,6 +28,7 @@
   },
   "devDependencies": {
     "@types/node": "latest",
+    "@types/qs": "^6.9.8",
     "@types/react": "latest",
     "@types/react-dom": "latest",
     "autoprefixer": "latest",
