--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-hook-form": "^7.46.2",
     "react-icons": "^4.11.0",
     "react-intersection-observer": "^9.5.2",
+    "react-player": "^2.13.0",
     "swiper": "^10.3.0",
     "swr": "^2.2.4",
     "yup": "^1.3.1",
