--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@hookform/resolvers": "^3.3.1",
     "axios": "^1.5.1",
+    "framer-motion": "^10.16.4",
     "moment": "^2.29.4",
     "next": "latest",
     "qs": "^6.11.2",
